--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    flex-direction: column;
 }
 
-.container {
+.container{
     height: 580px;
     width: 90%;
     max-width: 670px;
@@ -23,6 +24,20 @@ body {
     background: #2d2d2d;
     border: 0.5px solid #6a6a6a;
     position: relative;
+}
+
+.container1{
+    height: 80px;
+    width: 90%;
+    max-width: 670px;
+    text-align: center;
+    border-radius: 50px;
+    background: #2d2d2d;
+    border: 0.5px solid #6a6a6a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 .container h1 {
@@ -36,14 +51,14 @@ body {
     border-top: .5px solid #6a6a6a;
 }
 
-.search {
+.search, .api {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
 }
 
-.search input {
+.search input{
     width: 95%;
     height: 70px;
     background: #474747;
@@ -59,8 +74,24 @@ body {
     color: #c8c8c8;
     scrollbar-width: none;
 }
+.api input {
+    width: 600px;
+    height: 50px;
+    background: #474747;
+    padding: 25px;
+    border-radius: 50px;
+    border: 0.5px solid #6a6a6a;
+    outline: none;
+    font-size: 16px;
+    transform: none;
+    resize: none;
+    bottom: 15px;
+    color: #c8c8c8;
+    scrollbar-width: none;
+    margin: 10px;
+}
 
-.search img {
+.search img, .api img {
     filter: invert(1);
 }
 
@@ -117,4 +148,24 @@ body {
     word-wrap: break-word; 
     color: #c8c8c8;
     margin-bottom: 15px;
+}
+
+#api-btn {
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    outline: none;
+}
+
+#search_area1{
+    position: absolute;
+    top: 72px;
+    min-width: 635px;
+    padding: 20px 80px 20px 20px;
+}
+
+#api-btn {
+    position: absolute;
+    right: 450px;
+    top: 95px;
 }
